--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@ background: black;
 <hr>
 <p class="style1"><center><h2 style+"font: #faf7f8;"><font face = "-apple-system-headline" size = "4.5"><b><strong>NEW ORLEANS GUIDE 2024</strong></b></font><br></h2></center></p>
 <hr>
-<p>RESTAURANTS</p>
+<p><b>RESTAURANTS</b></p>
+<p>GALATOIRE'S</p>
 <p>BARS</p>
 <p>DRINKING GARDENS</p>
 <p>ART</p>
