--- a/index.html
+++ b/index.html
@@ -31,13 +31,19 @@ background: black;
 <hr>
 <p><b>RESTAURANTS</b></p>
 <p>GALATOIRE'S</p>
+
 <p>BARS</p>
     
 <p>DRINKING GARDENS</p>
-<p>Bayou Beer Garden <a href="https://bayoubeergarden.com"></p>
+<p>Bayou Beer Garden <a href="https://bayoubeergarden.com"></a></p>
+<p>Tchoup Yard <a href="www.tchoupyard.com"></a></p>
 
 <p>DAYTIME ACTIVITIES</p>
+<p>Bdffrnt Vintage (store)</p>
 
+<p>COFFEE</p>
+<p>Rue de la Course <a href="http://www.ruedelacourse.com"></a></p>
+<p>French Truck Coffee <a href="frenchtruckcoffee.com"></a></p\
 <p>ART</p>
     
 <p>PLANT GARDENS</p>
