--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ background: black;
 <p>COFFEE</p>
 <p>Rue de la Course <a href="http://www.ruedelacourse.com"></a></p>
 <p>French Truck Coffee <a href="frenchtruckcoffee.com"></a></p\
+<p>CR Coffee Shop <a href="https://www.crcoffeenola.com"></a></p>
 <p>ART</p>
     
 <p>PLANT GARDENS</p>
