--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@ background: black;
 <p>Tchoup Yard <a href="www.tchoupyard.com"></a></p>
 
 <p>DAYTIME ACTIVITIES</p>
+<p>Audubon Zoo <a href="https://audubonnatureinstitute.org/zoo"></a></p>
+<p>Audubon Aquarium/Insectarium <a href="https://audubonnatureinstitute.org/aquarium"></a></p>
 <p>Bdffrnt Vintage (store)</p>
 
 <p>COFFEE</p>
@@ -46,7 +48,9 @@ background: black;
 <p>French Truck Coffee <a href="frenchtruckcoffee.com"></a></p\
 <p>CR Coffee Shop <a href="https://www.crcoffeenola.com"></a></p>
 <p>District Donuts <a href="https://www.districtdonuts.com"></a></p>
+
 <p>ART</p>
+<p>NOLA Art Bar <a href="NOLAartbar.com"></a></p>
     
 <p>PLANT GARDENS</p>
     
