--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@ background: black;
 <p>Audubon Zoo <a href="https://audubonnatureinstitute.org/zoo"></a></p>
 <p>Audubon Aquarium/Insectarium <a href="https://audubonnatureinstitute.org/aquarium"></a></p>
 <p>Bdffrnt Vintage (store)</p>
+<p>The Exchange <a href="https://theexchangenola.com"></a></p>
+<p>St. Roch Market <a href="https://www.strochmarket.com"></a></p>
 
 <p>COFFEE</p>
 <p>Rue de la Course <a href="http://www.ruedelacourse.com"></a></p>
@@ -51,7 +53,8 @@ background: black;
 
 <p>ART</p>
 <p>NOLA Art Bar <a href="NOLAartbar.com"></a></p>
-    
+<p>NOLA Art Walk <a href="https://abnb.me/4wrKuU5VHEb"></a></p>
+
 <p>PLANT GARDENS</p>
     
 <p>ADDITIONAL LOCATIONS</p>
