--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@ background: black;
 <p>District Donuts <a href="https://www.districtdonuts.com"></a></p>
 
 <p>ART</p>
+<p>NOMA <a href="noma.org"></a></p>
+<p>OGDEN <a href="https://ogdenmuseum.org"></a></p>
 <p>NOLA Art Bar <a href="NOLAartbar.com"></a></p>
 <p>NOLA Art Walk <a href="https://abnb.me/4wrKuU5VHEb"></a></p>
 
