--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ background: black;
 <p>Audubon Aquarium/Insectarium <a href="https://audubonnatureinstitute.org/aquarium"></a></p>
 <p>Bdffrnt Vintage (store)</p>
 <p>The Exchange <a href="https://theexchangenola.com"></a></p>
+<p>DNO Downtown NOLA <a href="https://dno.la"></a></p>
 <p>St. Roch Market <a href="https://www.strochmarket.com"></a></p>
 
 <p>COFFEE</p>
