--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@ background: black;
 <p>Bdffrnt Vintage (store)</p>
 <p>The Exchange <a href="https://theexchangenola.com"></a></p>
 <p>DNO Downtown NOLA <a href="https://dno.la"></a></p>
-<p>St. Roch Market <a href="https://www.strochmarket.com"></a></p>
 <p>NOLA Mix Records <a href="https://www.nolamix.com"></a></p>
 <p>PEACHES Records <a href="https://www.peachesrecordsandtapes.com"></a></p>
-
+<p>St. Roch Market <a href="https://www.strochmarket.com"></a></p>
+<p>Barracuda Taco Stand <a href="https://www.eatbarracuda.com"></a></p>
+    
 <p>COFFEE</p>
 <p>Rue de la Course <a href="http://www.ruedelacourse.com"></a></p>
 <p>French Truck Coffee <a href="frenchtruckcoffee.com"></a></p\
