--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ background: black;
 <p>French Truck Coffee <a href="frenchtruckcoffee.com"></a></p\
 <p>CR Coffee Shop <a href="https://www.crcoffeenola.com"></a></p>
 <p>District Donuts <a href="https://www.districtdonuts.com"></a></p>
+<p>Le Petit Bleu <a href="commanderspalace.com"></a></p>
 
 <p>ART</p>
 <p>NOMA <a href="noma.org"></a></p>
