--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@ background: black;
 <p>BARS</p>
     
 <p>DRINKING GARDENS</p>
-<p>Bayou Beer Garden <a href="https://bayoubeergarden.com"></a></p>
-<p>Tchoup Yard <a href="www.tchoupyard.com"></a></p>
+<p><a href="https://bayoubeergarden.com" target="_blank">Bayou Beer Garden</a></p>
+<p><a href="www.tchoupyard.com"></a>Tchoup Yard</p>
 
 <p>DAYTIME ACTIVITIES</p>
-<p>Audubon Zoo <a href="https://audubonnatureinstitute.org/zoo"></a></p>
-<p>Audubon Aquarium/Insectarium <a href="https://audubonnatureinstitute.org/aquarium"></a></p>
+<p><a href="https://audubonnatureinstitute.org/zoo">Audubon Zoo</a></p>
+<p><a href="https://audubonnatureinstitute.org/aquarium">Audubon Aquarium/Insectarium</a></p>
 <p>Bdffrnt Vintage (store)</p>
-<p>The Exchange <a href="https://theexchangenola.com"></a></p>
-<p>DNO Downtown NOLA <a href="https://dno.la"></a></p>
-<p>NOLA Mix Records <a href="https://www.nolamix.com"></a></p>
-<p>PEACHES Records <a href="https://www.peachesrecordsandtapes.com"></a></p>
-<p>St. Roch Market <a href="https://www.strochmarket.com"></a></p>
-<p>Barracuda Taco Stand <a href="https://www.eatbarracuda.com"></a></p>
+<p><a href="https://theexchangenola.com">The Exchange </a></p>
+<p><a href="https://dno.la">DNO Downtown NOLA</a></p>
+<p><a href="https://www.nolamix.com">NOLA Mix Records</a></p>
+<p><a href="https://www.peachesrecordsandtapes.com">Peaches Records</a></p>
+<p><a href="https://www.strochmarket.com">St. Roch Market</a></p>
+<p><a href="https://www.eatbarracuda.com">Barracuda Taco Stand</a></p>
     
 <p>COFFEE</p>
 <p>Rue de la Course <a href="http://www.ruedelacourse.com"></a></p>
