--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@ background: black;
 <p class="style1"><center><h2 style+"font: #faf7f8;"><font face = "-apple-system-headline" size = "4.5"><b><strong>NEW ORLEANS GUIDE 2024</strong></b></font><br></h2></center></p>
 <hr>
 <p><b>RESTAURANTS</b></p>
-<p>GALATOIRE'S</p>
+<p><a href="https://www.galatoires.com" target="_blank">Galatoire's</a></p>
+<p><a href="https://www.pecherestaurant.com" target="_blank">Peche</a></p>
 
 <p>BARS</p>
     
