--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@ background: black;
 <p><b>RESTAURANTS</b></p>
 <p><a href="https://www.galatoires.com" target="_blank">Galatoire's</a></p>
 <p><a href="https://www.pecherestaurant.com" target="_blank">Peche</a></p>
-
+<p><a href="http://www.superiorseafoodnola.com" target="_blank">Superior Seafood</a></p>
+<p><a href="https://neworleans.superiorgrill.com" target="_blank">Superior Grill</a></p>
 <p>BARS</p>
     
 <p>DRINKING GARDENS</p>
