--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@ background: black;
 <p><a href="https://www.eatbarracuda.com" target="_blank">Barracuda Taco Stand</a></p>
     
 <p>COFFEE</p>
-<p>Rue de la Course <a href="http://www.ruedelacourse.com" target="_blank"></a></p>
-<p>French Truck Coffee <a href="frenchtruckcoffee.com" target="_blank"></a></p\
-<p>CR Coffee Shop <a href="https://www.crcoffeenola.com" target="_blank"></a></p>
-<p>District Donuts <a href="https://www.districtdonuts.com" target="_blank"></a></p>
-<p>Le Petit Bleu <a href="commanderspalace.com" target="_blank"></a></p>
+<p><a href="http://www.ruedelacourse.com" target="_blank">Rue de la Course</a></p>
+<p><a href="frenchtruckcoffee.com" target="_blank">French Truck Coffee</a></p\
+<p><a href="https://www.crcoffeenola.com" target="_blank">CR Coffee Shop</a></p>
+<p><a href="https://www.districtdonuts.com" target="_blank">District Donuts</a></p>
+<p><a href="commanderspalace.com" target="_blank">Le Petit Bleu</a></p>
 
 <p>ART</p>
-<p>NOMA <a href="noma.org" target="_blank"></a></p>
-<p>OGDEN <a href="https://ogdenmuseum.org" target="_blank"></a></p>
-<p>NOLA Art Bar <a href="NOLAartbar.com" target="_blank"></a></p>
-<p>NOLA Art Walk <a href="https://abnb.me/4wrKuU5VHEb" target="_blank"></a></p>
+<p><a href="noma.org" target="_blank">NOMA</a></p>
+<p><a href="https://ogdenmuseum.org" target="_blank">Ogden</a></p>
+<p><a href="NOLAartbar.com" target="_blank">NOLA Art Bar</a></p>
+<p><a href="https://abnb.me/4wrKuU5VHEb" target="_blank">NOLA Art Walk</a></p>
 
 <p>PLANT GARDENS</p>
     
