--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ background: black;
 <p><a href="https://www.pecherestaurant.com" target="_blank">Peche</a></p>
 <p><a href="http://www.superiorseafoodnola.com" target="_blank">Superior Seafood</a></p>
 <p><a href="https://neworleans.superiorgrill.com" target="_blank">Superior Grill</a></p>
+ <p><a href="https://www.tableaufrenchquarter.com" target="_blank">Tableau</a></p>   
 <p>BARS</p>
     
 <p>DRINKING GARDENS</p>
