--- a/index.html
+++ b/index.html
@@ -34,7 +34,18 @@ background: black;
 <p><a href="https://www.pecherestaurant.com" target="_blank">Peche</a></p>
 <p><a href="http://www.superiorseafoodnola.com" target="_blank">Superior Seafood</a></p>
 <p><a href="https://neworleans.superiorgrill.com" target="_blank">Superior Grill</a></p>
- <p><a href="https://www.tableaufrenchquarter.com" target="_blank">Tableau</a></p>   
+<p><a href="https://www.tableaufrenchquarter.com" target="_blank">Tableau</a></p>
+<p><a href="https://fogodechao.com/location/new-orleans/" target="_blank">Fogo De Chao</a></p>
+<p><a href="https://www.vyoone.com/menu" target="_blank">Vyoone's</a></p>
+<p><a href="https://windsorcourthotel.com/dining/the-grill-room/" target="_blank">The Grill Room</a></p>
+<p><a href="www.justinenola.com" target="_blank">Justine</a></p>
+<p><a href="https://www.brennansneworleans.com" target="_blank">Brennan's</a></p>
+<p><a href="josephineestelle.com" target="_blank">Josephine Estelle</a></p>
+<p><a href="" target="_blank"></a></p>
+<p><a href="" target="_blank"></a></p>
+<p><a href="" target="_blank"></a></p>
+<p><a href="" target="_blank"></a></p>
+    
 <p>BARS</p>
     
 <p>DRINKING GARDENS</p>
