--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@ background: black;
 <p><a href="www.justinenola.com" target="_blank">Justine</a></p>
 <p><a href="https://www.brennansneworleans.com" target="_blank">Brennan's</a></p>
 <p><a href="josephineestelle.com" target="_blank">Josephine Estelle</a></p>
+<p><a href="https://www.clancysneworleans.com" target="_blank">Clancy's</a></p>
+<p><a href="https://www.liletterestaurant.com" target="_blank">Lilette</a></p>
+<p><a href="https://www.sidecarnola.com" target="_blank">SideCar</a></p>
+<p><a href="https://www.jackroserestaurant.com" target="_blank">Jack Rose</a></p>
+<p><a href="https://bemeril.com" target="_blank">Meril</a></p>
+<p><a href="" target="_blank"></a></p>
+<p><a href="" target="_blank"></a></p>
 <p><a href="" target="_blank"></a></p>
 <p><a href="" target="_blank"></a></p>
 <p><a href="" target="_blank"></a></p>
