--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@ background: black;
 <p><a href="https://www.sidecarnola.com" target="_blank">SideCar</a></p>
 <p><a href="https://www.jackroserestaurant.com" target="_blank">Jack Rose</a></p>
 <p><a href="https://bemeril.com" target="_blank">Meril</a></p>
-<p><a href="" target="_blank"></a></p>
-<p><a href="" target="_blank"></a></p>
-<p><a href="" target="_blank"></a></p>
-<p><a href="" target="_blank"></a></p>
-<p><a href="" target="_blank"></a></p>
+<p><a href="https://www.lapetitegrocery.com" target="_blank">Le Petite Grocery</a></p>
+<p><a href="https://herbsaint.com/menus-2/" target="_blank">Herb Saint</a></p>
+<p><a href="http://comperelapin.com" target="_blank">Compére Lapin</a></p>
+<p><a href="https://www.ralphsonthepark.com" target="_blank">Ralph's on Park</a></p>
+<p><a href="https://www.arnaudsrestaurant.com" target="_blank">Arnaud's</a></p>
 <p><a href="" target="_blank"></a></p>
     
 <p>BARS</p>
