--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ background: black;
 <p><a href="https://windsorcourthotel.com/dining/the-grill-room/" target="_blank">The Grill Room</a></p>
 <p><a href="www.justinenola.com" target="_blank">Justine</a></p>
 <p><a href="https://www.brennansneworleans.com" target="_blank">Brennan's</a></p>
+<p><a href="https://www.palacecafe.com" target="_blank">Palace Cafe</a></p>
 <p><a href="josephineestelle.com" target="_blank">Josephine Estelle</a></p>
 <p><a href="https://www.clancysneworleans.com" target="_blank">Clancy's</a></p>
 <p><a href="https://www.liletterestaurant.com" target="_blank">Lilette</a></p>
@@ -51,9 +52,24 @@ background: black;
 <p><a href="http://comperelapin.com" target="_blank">Compére Lapin</a></p>
 <p><a href="https://www.ralphsonthepark.com" target="_blank">Ralph's on Park</a></p>
 <p><a href="https://www.arnaudsrestaurant.com" target="_blank">Arnaud's</a></p>
-<p><a href="" target="_blank"></a></p>
+<p><a href="https://ribroomneworleans.com" target="_blank">Rib Room</a></p>
     
 <p>BARS</p>
+<p><a href="https://m.fourseasons.com/neworleans/dining/lounges/chandelier-bar/seo=google_local_nln3_" target="_blank">Chandelier Bar</a></p>
+<p><a href="https://www.curenola.com" target="_blank">Cure</a></p>
+<p><a href="https://www.barmarilou.com" target="_blank">Bar Marilou</a></p>
+<p><a href="https://hotelmonteleone.com/entertainment/carousel-bar/" target="_blank">Carousel Bar</a></p>
+<p><a href="http://www.bacchanalwine.com" target="_blank">Bacchanal's</a></p>
+<p><a href="https://www.oaknola.net" target="_blank">Oak Wine Bar</a></p>
+<p><a href="https://boucherie-nola.com" target="_blank"></a>Boucherie</p>
+<p><a href="https://www.nolabubbles.com" target="_blank">Effervescence</a></p>
+<p><a href="https://peacockroomnola.com" target="_blank">Peacock Room</a></p>
+<p><a href="http://www.lafittesblacksmithshop.com" target="_blank">Lafitte's Blacksmith Bar</a></p>
+<p><a href="https://thecolumns.com" target="_blank">The Columns</a></p>
+<p><a href="https://www.jewelnola.com" target="_blank">Jewel of the South</a></p>
+<p><a href="" target="_blank"></a></p>
+<p><a href="" target="_blank"></a></p>
+<p><a href="" target="_blank"></a></p>
     
 <p>DRINKING GARDENS</p>
 <p><a href="https://bayoubeergarden.com" target="_blank">Bayou Beer Garden</a></p>
