--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ background: black;
     
 <p>COFFEE</p>
 <p><a href="http://www.ruedelacourse.com" target="_blank">Rue de la Course</a></p>
-<p><a href="frenchtruckcoffee.com" target="_blank">French Truck Coffee</a></p\
+<p><a href="frenchtruckcoffee.com" target="_blank">French Truck Coffee</a></p>
 <p><a href="https://www.crcoffeenola.com" target="_blank">CR Coffee Shop</a></p>
 <p><a href="https://www.districtdonuts.com" target="_blank">District Donuts</a></p>
 <p><a href="commanderspalace.com" target="_blank">Le Petit Bleu</a></p>
