--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ background: black;
     
 <p>DRINKING GARDENS</p>
 <p><a href="https://bayoubeergarden.com" target="_blank">Bayou Beer Garden</a></p>
-<p><a href="www.tchoupyard.com" target="_blank"></a>Tchoup Yard</p>
+<p><a href="www.tchoupyard.com" target="_blank">Tchoup Yard</a></p>
 
 <p>DAYTIME ACTIVITIES</p>
 <p><a href="https://audubonnatureinstitute.org/zoo" target="_blank">Audubon Zoo</a></p>
