--- a/index.html
+++ b/index.html
@@ -67,9 +67,6 @@ background: black;
 <p><a href="http://www.lafittesblacksmithshop.com" target="_blank">Lafitte's Blacksmith Bar</a></p>
 <p><a href="https://thecolumns.com" target="_blank">The Columns</a></p>
 <p><a href="https://www.jewelnola.com" target="_blank">Jewel of the South</a></p>
-<p><a href="" target="_blank"></a></p>
-<p><a href="" target="_blank"></a></p>
-<p><a href="" target="_blank"></a></p>
     
 <p>DRINKING GARDENS</p>
 <p><a href="https://bayoubeergarden.com" target="_blank">Bayou Beer Garden</a></p>
@@ -84,6 +81,9 @@ background: black;
 <p><a href="https://www.nolamix.com" target="_blank">NOLA Mix Records</a></p>
 <p><a href="https://www.peachesrecordsandtapes.com" target="_blank">Peaches Records</a></p>
 <p><a href="https://www.strochmarket.com" target="_blank">St. Roch Market</a></p>
+<p><a href="http://www.longuevue.com" target="_blank">Longue Vue House & Garden</a></p>
+<p><a href="https://neworleanscitypark.org/visit-city-park/botanical-garden/" target="_blank">New Orleans Botanical Gardens</a></p>
+<p><a href="" target="_blank"></a></p>
 
 <p>LUNCHEON</p>
 <p><a href="https://cocobbqnola.com" target="_blank">Coco Korea BBQ</a></p>
@@ -102,6 +102,5 @@ background: black;
 <p><a href="NOLAartbar.com" target="_blank">NOLA Art Bar</a></p>
 <p><a href="https://abnb.me/4wrKuU5VHEb" target="_blank">NOLA Art Walk</a></p>
 
-<p>PLANT GARDENS</p>
 </body>
 </html>
