--- a/index.html
+++ b/index.html
@@ -22,6 +22,26 @@ font-size: 10px;
 margin-bottom: -50px;
 background: black;
 }
+a:link {
+  color: white; 
+  background-color: transparent; 
+  text-decoration: bold;
+}
+        a:visited {
+  color: purple;
+  background-color: transparent;
+  text-decoration: bold;
+}
+        a:hover {
+  color: gold;
+  background-color: transparent;
+  text-decoration: bold;
+}
+        a:active {
+  color: green;
+  background-color: transparent;
+  text-decoration: bold;
+}
 </style>
 </head>
 <body>
