--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ a:link {
 <p><a href="https://hotelmonteleone.com/entertainment/carousel-bar/" target="_blank">Carousel Bar</a></p>
 <p><a href="http://www.bacchanalwine.com" target="_blank">Bacchanal's</a></p>
 <p><a href="https://www.oaknola.net" target="_blank">Oak Wine Bar</a></p>
-<p><a href="https://boucherie-nola.com" target="_blank"></a>Boucherie</p>
+<p><a href="https://boucherie-nola.com" target="_blank">Boucherie</a></p>
 <p><a href="https://www.nolabubbles.com" target="_blank">Effervescence</a></p>
 <p><a href="https://peacockroomnola.com" target="_blank">Peacock Room</a></p>
 <p><a href="http://www.lafittesblacksmithshop.com" target="_blank">Lafitte's Blacksmith Bar</a></p>
