--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ margin-bottom: -50px;
 background: black;
 }
 a:link {
-  color: white; 
+  color: gray; 
   background-color: transparent; 
   text-decoration: bold;
 }
