--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ margin-bottom: -50px;
 background: black;
 }
 a:link {
-  color: gold; 
-  background-color: transparent; 
+  color: white; 
+  background-color: gold; 
   text-decoration: bold;
 }
         a:visited {
