--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ a:link {
 </style>
 </head>
 <body>
+<basefont face = "-apple-system-headline" size = "10" color = "white">
 <title>NEW ORLEANS GUIDE 2024</title>
 <hr>
 <p class="style1"><center><h2 style+"font: #faf7f8;"><font face = "-apple-system-headline" size = "15"><b><strong>NEW ORLEANS GUIDE 2024</strong></b></font><br></h2></center></p>
