--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@ a:link {
 <hr>
 <p class="style1"><center><h2 style+"font: #faf7f8;"><font face = "-apple-system-headline" size = "15"><b><strong>NEW ORLEANS GUIDE 2024</strong></b></font><br></h2></center></p>
 <hr>
+<image src="image.jpeg">
+<hr>
 <p><b>RESTAURANTS</b></p>
 <p><a href="https://www.galatoires.com" target="_blank">Galatoire's</a></p>
 <p><a href="https://www.pecherestaurant.com" target="_blank">Peche</a></p>
