--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@ a:link {
 </head>
 <body>
 <basefont face = "-apple-system-headline" size = "10" color = "white">
-<title>NEW ORLEANS GUIDE 2024</title>
+<center><title>NEW ORLEANS GUIDE 2024</title></center>
 <hr>
 <p class="style1"><center><h2 style+"font: #faf7f8;"><font face = "-apple-system-headline" size = "15"><b><strong>NEW ORLEANS GUIDE 2024</strong></b></font><br></h2></center></p>
 <hr>
-<image src="image.jpeg">
+<center><image src="image.jpeg"></center>
 <hr>
 <p><b>RESTAURANTS</b></p>
 <p><a href="https://www.galatoires.com" target="_blank">Galatoire's</a></p>
