--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="title" content="BROWORDS">
-    <meta name="viewport" content="width=device-width, maximum-scale:1.0, initial-scale=1.0, user-scalable=no"/>
+  <meta name="title" content="NEW ORLEANS GUIDE 2024">
+<meta property="og:image" content="image.jpeg">
+<meta property="og:image:type" content="image/jpeg">
+<meta property="og:image:width" content="1080">
+<meta property="og:image:height" content="1080">
+<meta name="viewport" content="width=device-width, maximum-scale:1.0, initial-scale=1.0, user-scalable=no"/>
+    <meta name="title" content="NEW ORLEANS GUIDE 2024">
 <body style="background-color: black;">
 <font color="#faf7f8">
     <font size="5 px">
