--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@ a:link {
   background-color: transparent;
   text-decoration: bold;
 }
+        .image1 {
+width: 350px;
+height: 60px;
+float:center;
+}
 </style>
 </head>
 <body>
@@ -55,7 +60,7 @@ a:link {
 <hr>
 <p class="style1"><center><h2 style+"font: #faf7f8;"><font face = "-apple-system-headline" size = "15"><b><strong>NEW ORLEANS GUIDE 2024</strong></b></font><br></h2></center></p>
 <hr>
-<center><image src="image.jpeg"></center>
+<center><image src="image.jpeg"class="image1"></center>
 <hr>
 <p><b>RESTAURANTS</b></p>
 <p><a href="https://www.galatoires.com" target="_blank">Galatoire's</a></p>
