--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ float:center;
 <p><a href="https://fogodechao.com/location/new-orleans/" target="_blank">Fogo De Chao</a></p>
 <p><a href="https://www.vyoone.com/menu" target="_blank">Vyoone's</a></p>
 <p><a href="https://windsorcourthotel.com/dining/the-grill-room/" target="_blank">The Grill Room</a></p>
-<p><a href="www.justinenola.com" target="_blank">Justine</a></p>
+<p><a href="https://www.justinenola.com" target="_blank">Justine</a></p>
 <p><a href="https://www.brennansneworleans.com" target="_blank">Brennan's</a></p>
 <p><a href="https://www.palacecafe.com" target="_blank">Palace Cafe</a></p>
 <p><a href="josephineestelle.com" target="_blank">Josephine Estelle</a></p>
@@ -103,7 +103,7 @@ float:center;
     
 <p><b>DRINKING GARDENS</b></p>
 <p><a href="https://bayoubeergarden.com" target="_blank">Bayou Beer Garden</a></p>
-<p><a href="www.tchoupyard.com" target="_blank">Tchoup Yard</a></p>
+<p><a href="https://www.tchoupyard.com" target="_blank">Tchoup Yard</a></p>
 
 <p><b>DAYTIME ACTIVITIES</b></p>
 <p><a href="https://audubonnatureinstitute.org/zoo" target="_blank">Audubon Zoo</a></p>
@@ -123,15 +123,15 @@ float:center;
     
 <p><b>COFFEE</b></p>
 <p><a href="http://www.ruedelacourse.com" target="_blank">Rue de la Course</a></p>
-<p><a href="frenchtruckcoffee.com" target="_blank">French Truck Coffee</a></p>
+<p><a href="https://frenchtruckcoffee.com" target="_blank">French Truck Coffee</a></p>
 <p><a href="https://www.crcoffeenola.com" target="_blank">CR Coffee Shop</a></p>
 <p><a href="https://www.districtdonuts.com" target="_blank">District Donuts</a></p>
 <p><a href="commanderspalace.com" target="_blank">Le Petit Bleu</a></p>
 
 <p><b>ART</b></p>
-<p><a href="noma.org" target="_blank">NOMA</a></p>
+<p><a href="https://noma.org" target="_blank">NOMA</a></p>
 <p><a href="https://ogdenmuseum.org" target="_blank">Ogden</a></p>
-<p><a href="NOLAartbar.com" target="_blank">NOLA Art Bar</a></p>
+<p><a href="https://NOLAartbar.com" target="_blank">NOLA Art Bar</a></p>
 <p><a href="https://abnb.me/4wrKuU5VHEb" target="_blank">NOLA Art Walk</a></p>
 
 </body>
