--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ float:center;
 <p><a href="https://frenchtruckcoffee.com" target="_blank">French Truck Coffee</a></p>
 <p><a href="https://www.crcoffeenola.com" target="_blank">CR Coffee Shop</a></p>
 <p><a href="https://www.districtdonuts.com" target="_blank">District Donuts</a></p>
-<p><a href="commanderspalace.com" target="_blank">Le Petit Bleu</a></p>
+<p><a href="https://www.commanderspalace.com" target="_blank">Le Petit Bleu</a></p>
 
 <p><b>ART</b></p>
 <p><a href="https://noma.org" target="_blank">NOMA</a></p>
