--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ float:center;
 </style>
 </head>
 <body>
-<button type="button" style="cursor: pointer;border-radius: 10px;background-color:white;border: 2px solid #b7da4d"> <img src="image.jpeg" height="50" width="50" /></button>
+<center><button type="button" style="cursor: pointer;border-radius: 10px;background-color:white;border: 2px solid #b7da4d"> <img src="image.jpeg" height="50" width="50" /></button></center>
 <basefont face = "-apple-system-headline" size = "10" color = "white">
 <center><title>NEW ORLEANS GUIDE 2024</title></center>
 <hr>
