--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@ float:center;
 </style>
 </head>
 <body>
-<center><button><button type="button" style="cursor: pointer;border-radius: 10px;background-color:white;border: 2px solid #b7da4d"> <img src="image.jpeg" height="50" width="50" /></button>
+<center><button type="button" style="cursor: pointer;border-radius: 10px;background-color:white;border: 2px solid #b7da4d"> <img src="image.jpeg" height="50" width="50" />
 <button id="ASong" onClick="playPause()">
-  <audio src="Art Neville:All These Things.mp3"autoplay loop></audio>NOLA</button></button></center>
+  <audio src="Art Neville:All These Things.mp3"autoplay loop></audio>NOLA</button></center>
 <basefont face = "-apple-system-headline" size = "10" color = "white">
 <center><title>NEW ORLEANS GUIDE 2024</title></center>
 <hr>
