--- a/index.html
+++ b/index.html
@@ -52,6 +52,18 @@ width: 100px;
 height: 100px;
 float:center;
 }
+  var aud = document.getElementById("ASong").children[0];
+  var isPlaying = false;
+  aud.pause();
+
+  function playPause() {
+    if (isPlaying) {
+      aud.pause();
+    } else {
+      aud.play();
+    }
+    isPlaying = !isPlaying;
+  }
 </style>
 </head>
 <body>
