--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@ float:center;
 </head>
 <body>
 <center><button type="button" style="cursor: pointer;border-radius: 0px;background-color:white;border: 0px solid black"> <img src="image.jpeg" height="50" width="50"></button>
-<button id="ASong" onClick="playPause()">
-  <audio controls src="Art Neville:All These Things.mp3"autoplay loop/></audio></button></center>
+<p><button id="ASong" onClick="playPause()">
+  <audio controls src="Art Neville:All These Things.mp3"autoplay loop/></audio></button></center></p>
 <basefont face = "-apple-system-headline" size = "10" color = "white">
 <center><title>NEW ORLEANS GUIDE 2024</title></center>
 <hr>
