--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@ float:center;
 </style>
 </head>
 <body>
-<center><button type="button" style="cursor: pointer;border-radius: 0px;background-color:white;border: 0px solid black"> <img src="image.jpeg" height="50" width="50"></button></center>
-<p><center><button id="button1" onClick="playPause()">
-  <audio controls src="Art Neville:All These Things.mp3"autoplay loop/></audio></button></center></p>
+<center><a onclick="myAudioFunction('A');">
+     <img src="image.jpeg"></center>
+ </a>
 <basefont face = "-apple-system-headline" size = "10" color = "white">
 <center><title>NEW ORLEANS GUIDE 2024</title></center>
 <hr>
