--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@ width: 100px;
 height: 100px;
 float:center;
 }
+var aAudio = new Audio('a.mp3');
+function myAudioFunction(letter) {
+         if(letter == 'a') {
+        }
+      }
 </style>
 </head>
 <body>
