--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@ function myAudioFunction(letter) {
 </head>
 <body>
 <center><a onclick="myAudioFunction('A');">
-     <img src="image.jpeg"></center>
+     <img src="image.jpeg"
+      width="100"
+      height="100"></center>
  </a>
 <basefont face = "-apple-system-headline" size = "10" color = "white">
 <center><title>NEW ORLEANS GUIDE 2024</title></center>
