--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             margin-bottom: 50px;
         }
         a {
-            color: white;
+            color: black;
             background-color: gold;
             text-decoration: bold;
         }
