--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             margin-bottom: 50px;
         }
         a {
-            color: black;
-            background-color: gold;
+            color: gold;
+            background-color: none;
             text-decoration: bold;
         }
         a:visited {
