--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             color: purple;
         }
         a:hover {
-            color: gold;
+            color: green;
         }
         a:active {
             color: green;
