--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="title" content="NEW ORLEANS GUIDE 2024">
-    <meta property="og:image" content="image.jpeg">
+    <meta property="og:image" content="image2.jpeg">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="1080">
     <meta property="og:image:height" content="1080">
