--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             text-decoration: bold;
         }
         a:visited {
-            color: purple;
+            color: #BC13FE;
         }
         a:hover {
             color: green;
