--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             color: green;
         }
         a:active {
-            color: green;
+            color: #0BC507;
         }
         .image1 {
             width: 100px;
